--- a/w5/package.json
+++ b/w5/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.3.0",
     "nodemon": "^2.0.22",
     "swagger-autogen": "^2.23.1",
