--- a/w5/package.json
+++ b/w5/package.json
@@ -24,6 +24,9 @@
     "express-validator": "^7.0.1",
     "mongodb": "^5.3.0",
     "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-oauth2": "^1.7.0",
     "swagger-autogen": "^2.23.1",
     "swagger-ui-express": "^4.6.3"
   },
