--- a/w5/package.json
+++ b/w5/package.json
@@ -22,9 +22,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.3.0",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-oauth2": "^1.7.0",
     "swagger-autogen": "^2.23.1",
