--- a/w5/package.json
+++ b/w5/package.json
@@ -18,6 +18,7 @@
   },
   "description": "",
   "dependencies": {
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
